--- a/EVETool/EVETool.csproj
+++ b/EVETool/EVETool.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Jeremy\Desktop\0.0.3.3\</PublishUrl>
+    <PublishUrl>C:\Users\Jeremy\Desktop\0.0.3.4\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -25,8 +25,8 @@
     <ProductName>EVEPITool</ProductName>
     <PublisherName>w9jds</PublisherName>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>3</ApplicationRevision>
-    <ApplicationVersion>0.0.3.3</ApplicationVersion>
+    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationVersion>0.0.3.4</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -151,12 +151,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SIDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="ToolTip.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ToolTip.Designer.cs">
-      <DependentUpon>ToolTip.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="P4_P1.resx">
       <DependentUpon>P4_P1.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,9 +196,6 @@
     </Compile>
     <EmbeddedResource Include="ResourcePanel.resx">
       <DependentUpon>ResourcePanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ToolTip.resx">
-      <DependentUpon>ToolTip.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="EVETool_TemporaryKey.pfx" />
@@ -277,7 +268,7 @@
     <EmbeddedResource Include="Resources\Noble Metals.png" />
     <EmbeddedResource Include="Resources\Non-CS Crystals.png" />
     <EmbeddedResource Include="Resources\Nuclear Reactors.png" />
-    <EmbeddedResource Include="Resources\Organic Mortar Applications.png" />
+    <EmbeddedResource Include="Resources\Organic Mortar Applicators.png" />
     <EmbeddedResource Include="Resources\Oxides.png" />
     <EmbeddedResource Include="Resources\Oxidizing Compound.png" />
     <EmbeddedResource Include="Resources\Oxygen.png" />
