--- a/EVETool/App.config
+++ b/EVETool/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="EVETool.Properties.Settings.ScienceIndustryDatabase"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\ScienceIndustry.mdb"
-            providerName="System.Data.OleDb" />
+        <add name="EVETool.Properties.Settings.ScienceIndustryDatabase" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\ScienceIndustry.mdb" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
 </configuration>
